add configuration slint
